[gd_scene load_steps=8 format=3 uid="uid://be138b6vp1h2r"]

[ext_resource type="Texture2D" uid="uid://c4v8t4558345m" path="res://icon.svg" id="1_5usxr"]
[ext_resource type="Script" uid="uid://cksv1mts2bhka" path="res://Main/Scripts/warm_colder_game.gd" id="1_80n7q"]
[ext_resource type="Script" uid="uid://csocuxhjmjri5" path="res://Main/Scripts/warm_colder_game_parent.gd" id="1_u5o1d"]
[ext_resource type="Texture2D" uid="uid://c1cw6keenywh8" path="res://assets/TX Props with Shadow.png" id="4_oi4kq"]
[ext_resource type="Texture2D" uid="uid://brbitgx6w4vo7" path="res://assets/Icons/tap.png" id="5_mb14v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mb14v"]
size = Vector2(930, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5usxr"]
size = Vector2(128.984, 286)

[node name="WarmColderGame" type="Node2D"]
script = ExtResource("1_u5o1d")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(400, 0.5)
shape = SubResource("RectangleShape2D_mb14v")

[node name="Icon" type="Area2D" parent="."]
monitorable = false
script = ExtResource("1_80n7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon"]
position = Vector2(-1.50793, 81)
shape = SubResource("RectangleShape2D_5usxr")

[node name="Sprite" type="Sprite2D" parent="Icon"]
position = Vector2(-2, -4.5)
scale = Vector2(5, 3.3125)
texture = ExtResource("4_oi4kq")
region_enabled = true
region_rect = Rect2(163, 80, 26, 48)

[node name="Sprite2" type="Sprite2D" parent="Icon"]
modulate = Color(1, 1, 0, 1)
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 155)
texture = ExtResource("1_5usxr")

[node name="Tap" type="Sprite2D" parent="Icon"]
position = Vector2(25, -9)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_mb14v")

[node name="Icon2" type="Area2D" parent="."]
position = Vector2(200, 0)
monitorable = false
script = ExtResource("1_80n7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon2"]
position = Vector2(-1.50793, 81)
shape = SubResource("RectangleShape2D_5usxr")

[node name="Sprite" type="Sprite2D" parent="Icon2"]
position = Vector2(-2, -4.5)
scale = Vector2(5, 3.3125)
texture = ExtResource("4_oi4kq")
region_enabled = true
region_rect = Rect2(163, 80, 26, 48)

[node name="Sprite2" type="Sprite2D" parent="Icon2"]
modulate = Color(1, 1, 0, 1)
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 155)
texture = ExtResource("1_5usxr")

[node name="Tap" type="Sprite2D" parent="Icon2"]
position = Vector2(25, -9)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_mb14v")

[node name="Icon3" type="Area2D" parent="."]
position = Vector2(400, 0)
monitorable = false
script = ExtResource("1_80n7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon3"]
position = Vector2(-1.50793, 81)
shape = SubResource("RectangleShape2D_5usxr")

[node name="Sprite" type="Sprite2D" parent="Icon3"]
position = Vector2(-2, -4.5)
scale = Vector2(5, 3.3125)
texture = ExtResource("4_oi4kq")
region_enabled = true
region_rect = Rect2(163, 80, 26, 48)

[node name="Sprite2" type="Sprite2D" parent="Icon3"]
modulate = Color(1, 1, 0, 1)
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 155)
texture = ExtResource("1_5usxr")

[node name="Tap" type="Sprite2D" parent="Icon3"]
position = Vector2(25, -9)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_mb14v")

[node name="Icon4" type="Area2D" parent="."]
position = Vector2(600, 0)
monitorable = false
script = ExtResource("1_80n7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon4"]
position = Vector2(-1.50793, 81)
shape = SubResource("RectangleShape2D_5usxr")

[node name="Sprite" type="Sprite2D" parent="Icon4"]
position = Vector2(-2, -4.5)
scale = Vector2(5, 3.3125)
texture = ExtResource("4_oi4kq")
region_enabled = true
region_rect = Rect2(163, 80, 26, 48)

[node name="Sprite2" type="Sprite2D" parent="Icon4"]
modulate = Color(1, 1, 0, 1)
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 155)
texture = ExtResource("1_5usxr")

[node name="Tap" type="Sprite2D" parent="Icon4"]
position = Vector2(25, -9)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_mb14v")

[node name="Icon5" type="Area2D" parent="."]
position = Vector2(800, 0)
monitorable = false
script = ExtResource("1_80n7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon5"]
position = Vector2(-1.50793, 81)
shape = SubResource("RectangleShape2D_5usxr")

[node name="Sprite" type="Sprite2D" parent="Icon5"]
position = Vector2(-2, -4.5)
scale = Vector2(5, 3.3125)
texture = ExtResource("4_oi4kq")
region_enabled = true
region_rect = Rect2(163, 80, 26, 48)

[node name="Sprite2" type="Sprite2D" parent="Icon5"]
modulate = Color(1, 1, 0, 1)
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 155)
texture = ExtResource("1_5usxr")

[node name="Tap" type="Sprite2D" parent="Icon5"]
position = Vector2(25, -9)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_mb14v")

[connection signal="body_entered" from="Icon" to="Icon" method="_on_body_entered"]
[connection signal="body_exited" from="Icon" to="Icon" method="_on_body_exited"]
[connection signal="mouse_entered" from="Icon" to="Icon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Icon" to="Icon" method="_on_mouse_exited"]
[connection signal="body_entered" from="Icon2" to="Icon2" method="_on_body_entered"]
[connection signal="body_exited" from="Icon2" to="Icon2" method="_on_body_exited"]
[connection signal="mouse_entered" from="Icon2" to="Icon2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Icon2" to="Icon2" method="_on_mouse_exited"]
[connection signal="body_entered" from="Icon3" to="Icon3" method="_on_body_entered"]
[connection signal="body_exited" from="Icon3" to="Icon3" method="_on_body_exited"]
[connection signal="mouse_entered" from="Icon3" to="Icon3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Icon3" to="Icon3" method="_on_mouse_exited"]
[connection signal="body_entered" from="Icon4" to="Icon4" method="_on_body_entered"]
[connection signal="body_exited" from="Icon4" to="Icon4" method="_on_body_exited"]
[connection signal="mouse_entered" from="Icon4" to="Icon4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Icon4" to="Icon4" method="_on_mouse_exited"]
[connection signal="body_entered" from="Icon5" to="Icon5" method="_on_body_entered"]
[connection signal="body_exited" from="Icon5" to="Icon5" method="_on_body_exited"]
[connection signal="mouse_entered" from="Icon5" to="Icon5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Icon5" to="Icon5" method="_on_mouse_exited"]
